Changed the cilent to use the new finagle api upgraded finagle to latest version Implemented CloseableClient

--- a/thrift-swift-finagle-example-api/pom.xml
+++ b/thrift-swift-finagle-example-api/pom.xml
@@ -11,6 +11,17 @@
 
     <artifactId>thrift-swift-finagle-example-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.facebook.swift</groupId>
+            <artifactId>swift-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>util-core_${scala.major.version}</artifactId>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
