--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,11 @@
         <!-- finagle -->
         <scala.major.version>2.10</scala.major.version>
         <scala.version>2.10.4</scala.version>
-        <finagle.version>6.22.0.1-SNAPSHOT</finagle.version>
-        <twitter-util.version>6.22.1</twitter-util.version>
+        <finagle.version>6.25.0</finagle.version>
+        <twitter-util.version>6.24.0</twitter-util.version>
         <scrooge-maven-plugin.version>3.15.0</scrooge-maven-plugin.version>
         <libthrift.version>0.9.1</libthrift.version>
+        <facebook-swift.version>0.16.0-SNAPSHOT</facebook-swift.version>
 
         <maven-assembly-plugin.version>2.4.1</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
@@ -33,50 +34,57 @@
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
         <maven-surefire-report-plugin.version>2.17</maven-surefire-report-plugin.version>
 
-        <swift2thrift-maven-plug.version>0.14.0.1-SNAPSHOT</swift2thrift-maven-plug.version>
-
         <testng.version>6.8.8</testng.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>util-core_${scala.major.version}</artifactId>
-            <version>${twitter-util.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.thrift</groupId>
-            <artifactId>libthrift</artifactId>
-            <version>${libthrift.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>finagle-core_${scala.major.version}</artifactId>
-            <version>${finagle.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.thrift</groupId>
-                    <artifactId>libthrift</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>finagle-swift_${scala.major.version}</artifactId>
-            <version>${finagle.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.thrift</groupId>
-                    <artifactId>libthrift</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                <version>${scala.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>util-core_${scala.major.version}</artifactId>
+                <version>${twitter-util.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.thrift</groupId>
+                <artifactId>libthrift</artifactId>
+                <version>${libthrift.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.facebook.swift</groupId>
+                <artifactId>swift-annotations</artifactId>
+                <version>${facebook-swift.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>finagle-thrift_${scala.major.version}</artifactId>
+                <version>${finagle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>finagle-core_${scala.major.version}</artifactId>
+                <version>${finagle.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.thrift</groupId>
+                        <artifactId>libthrift</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
+            <!-- TEST DEPENDENCIES -->
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>${testng.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <pluginManagement>
@@ -99,7 +107,7 @@
                 <plugin>
                     <groupId>com.facebook.mojo</groupId>
                     <artifactId>swift2thrift-maven-plugin</artifactId>
-                    <version>${swift2thrift-maven-plug.version}</version>
+                    <version>${facebook-swift.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
