--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -26,6 +26,15 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-thrift_${scala.major.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-swift_${scala.major.version}</artifactId>
+            <version>${finagle.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
