--- a/thrift-swift-finagle-example-api/pom.xml
+++ b/thrift-swift-finagle-example-api/pom.xml
@@ -20,6 +20,16 @@
             <groupId>com.twitter</groupId>
             <artifactId>util-core_${scala.major.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -39,7 +49,7 @@
                     <idlFile>hello-world-service.idl</idlFile>
                     <javaPackage>com.example.api</javaPackage>
                     <swiftClassNames>
-                        <swiftClassName>com.example.api.HelloWorldService</swiftClassName>
+                        <swiftClassName>com.example.api.ContactService</swiftClassName>
                     </swiftClassNames>
                 </configuration>
             </plugin>
