--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
 
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
+        <joda-time.version>2.0</joda-time.version>
+        <jsr305.version>2.0.1</jsr305.version>
     </properties>
 
     <dependencyManagement>
@@ -67,6 +69,16 @@
                         <artifactId>libthrift</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda-time.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>${jsr305.version}</version>
             </dependency>
 
             <!-- TEST DEPENDENCIES -->
