--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>thrift-swift-finagle-example-client</module>
         <module>thrift-swift-finagle-example-server</module>
         <module>thrift-swift-finagle-example-rest</module>
+        <module>thrift-swift-finagle-example-util</module>
     </modules>
 
     <properties>
@@ -27,11 +28,18 @@
         <joda-time.version>2.0</joda-time.version>
         <jsr305.version>2.0.1</jsr305.version>
         <dropwizard.version>0.8.2</dropwizard.version>
+        <brave.version>2.3</brave.version>
+        <commons.version>3.1</commons.version>
+        <guava.version>18.0</guava.version>
+        <jackson.version>2.6.3</jackson.version>
+        <validation-api.version>1.1.0.Final</validation-api.version>
 
         <testng.version>6.9.4</testng.version>
 
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
+        <jasypt.version>1.9.2</jasypt.version>
+        <slf4j-api.version>1.7.12</slf4j-api.version>
     </properties>
 
     <dependencyManagement>
@@ -63,6 +71,11 @@
             </dependency>
             <dependency>
                 <groupId>com.twitter</groupId>
+                <artifactId>finagle-swift_${scala.major.version}</artifactId>
+                <version>${finagle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.twitter</groupId>
                 <artifactId>finagle-core_${scala.major.version}</artifactId>
                 <version>${finagle.version}</version>
                 <exclusions>
@@ -86,6 +99,56 @@
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-core</artifactId>
                 <version>${dropwizard.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.kristofa</groupId>
+                <artifactId>brave-zipkin-spancollector</artifactId>
+                <version>${brave.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.kristofa</groupId>
+                <artifactId>brave-jersey</artifactId>
+                <version>${brave.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.kristofa</groupId>
+                <artifactId>brave-impl</artifactId>
+                <version>${brave.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>${validation-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jasypt</groupId>
+                <artifactId>jasypt</artifactId>
+                <version>${jasypt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j-api.version}</version>
             </dependency>
 
             <!-- TEST DEPENDENCIES -->
