--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -17,27 +17,26 @@
             <artifactId>thrift-swift-finagle-example-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <!-- TEST DEPENDENCIES -->
         <dependency>
             <groupId>thrift-swift-finagle</groupId>
             <artifactId>thrift-swift-finagle-example-client</artifactId>
             <version>${project.version}</version>
-            <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>finagle-thrift_${scala.major.version}</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.twitter</groupId>
-            <artifactId>finagle-swift_${scala.major.version}</artifactId>
-            <version>${finagle.version}</version>
-        </dependency>
+
+        <!-- TEST DEPENDENCIES -->
+        <!--<dependency>-->
+            <!--<groupId>com.twitter</groupId>-->
+            <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.twitter</groupId>-->
+            <!--<artifactId>finagle-swift_${scala.major.version}</artifactId>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
