--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -22,18 +22,17 @@
             <artifactId>thrift-swift-finagle-example-client</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-swift_${scala.major.version}</artifactId>
+        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.twitter</groupId>-->
+        <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <!-- TEST DEPENDENCIES -->
-        <!--<dependency>-->
-            <!--<groupId>com.twitter</groupId>-->
-            <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.twitter</groupId>-->
-            <!--<artifactId>finagle-swift_${scala.major.version}</artifactId>-->
-            <!--<scope>test</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
