Add ContactResource to Rest server

--- a/thrift-swift-finagle-example-rest/pom.xml
+++ b/thrift-swift-finagle-example-rest/pom.xml
@@ -18,6 +18,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>thrift-swift-finagle</groupId>
+            <artifactId>thrift-swift-finagle-example-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
         </dependency>
