--- a/thrift-swift-finagle-example-client/pom.xml
+++ b/thrift-swift-finagle-example-client/pom.xml
@@ -18,6 +18,11 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>thrift-swift-finagle</groupId>
+            <artifactId>thrift-swift-finagle-example-util</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>finagle-thrift_${scala.major.version}</artifactId>
         </dependency>
