--- a/thrift-swift-finagle-example-client/pom.xml
+++ b/thrift-swift-finagle-example-client/pom.xml
@@ -26,5 +26,9 @@
             <groupId>com.twitter</groupId>
             <artifactId>finagle-thrift_${scala.major.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-swift_${scala.major.version}</artifactId>
+        </dependency>
     </dependencies>
 </project>
