--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -26,10 +26,13 @@
             <groupId>com.twitter</groupId>
             <artifactId>finagle-swift_${scala.major.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>util-core_${scala.major.version}</artifactId>
+        </dependency>
         <!--<dependency>-->
-        <!--<groupId>com.twitter</groupId>-->
-        <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
-        <!--<scope>test</scope>-->
+            <!--<groupId>com.twitter</groupId>-->
+            <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
         <!--</dependency>-->
 
         <!-- TEST DEPENDENCIES -->
