Change finagle-swift to standalone version instead of the part of finagle repo

--- a/thrift-swift-finagle-example-client/pom.xml
+++ b/thrift-swift-finagle-example-client/pom.xml
@@ -27,7 +27,7 @@
             <artifactId>finagle-thrift_${scala.major.version}</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.twitter</groupId>
+            <groupId>io.github.finagle</groupId>
             <artifactId>finagle-swift_${scala.major.version}</artifactId>
         </dependency>
     </dependencies>
