--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -23,7 +23,7 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.twitter</groupId>
+            <groupId>io.github.finagle</groupId>
             <artifactId>finagle-swift_${scala.major.version}</artifactId>
         </dependency>
         <dependency>
