--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
     <properties>
         <java.version>1.8</java.version>
 
-        <scala.major.version>2.10</scala.major.version>
-        <scala.version>2.10.4</scala.version>
+        <scala.major.version>2.11</scala.major.version>
+        <scala.version>2.11.7</scala.version>
         <finagle.version>6.29.0</finagle.version>
         <libthrift.version>0.9.1</libthrift.version>
         <facebook-swift.version>0.16.0-SNAPSHOT</facebook-swift.version>
@@ -34,6 +34,7 @@
         <jackson.version>${commons-lang.version}.3</jackson.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <httpcore.version>4.4.3</httpcore.version>
+        <finagle-swift.version>0.1-SNAPSHOT</finagle-swift.version>
 
         <testng.version>6.9.4</testng.version>
 
@@ -72,9 +73,9 @@
                 <version>${finagle.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.twitter</groupId>
+                <groupId>io.github.finagle</groupId>
                 <artifactId>finagle-swift_${scala.major.version}</artifactId>
-                <version>${finagle.version}</version>
+                <version>${finagle-swift.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.twitter</groupId>
