--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -23,6 +23,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-core_${scala.major.version}</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.github.finagle</groupId>
             <artifactId>finagle-swift_${scala.major.version}</artifactId>
         </dependency>
@@ -31,8 +35,8 @@
             <artifactId>util-core_${scala.major.version}</artifactId>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.twitter</groupId>-->
-            <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
+        <!--<groupId>com.twitter</groupId>-->
+        <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
         <!--</dependency>-->
 
         <!-- TEST DEPENDENCIES -->
