--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
+        <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
         <jasypt.version>1.9.2</jasypt.version>
         <slf4j-api.version>1.7.12</slf4j-api.version>
         <commons-lang.version>2.6</commons-lang.version>
@@ -217,6 +218,49 @@
                     <groupId>com.facebook.mojo</groupId>
                     <artifactId>swift2thrift-maven-plugin</artifactId>
                     <version>${facebook-swift.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>${scala-maven-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <id>scala-compile-first</id>
+                            <phase>process-resources</phase>
+                            <configuration>
+                                <args>
+                                    <param>-unchecked</param>
+                                    <param>-deprecation</param>
+                                    <param>-encoding</param>
+                                    <param>utf8</param>
+                                </args>
+                            </configuration>
+                            <goals>
+                                <goal>add-source</goal>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>scala-test-compile</id>
+                            <phase>process-test-resources</phase>
+                            <configuration>
+                                <args>
+                                    <param>-unchecked</param>
+                                    <param>-deprecation</param>
+                                    <param>-encoding</param>
+                                    <param>utf8</param>
+                                </args>
+                            </configuration>
+                            <goals>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <jvmArgs>
+                            <jvmArg>-Xmx2G</jvmArg>
+                        </jvmArgs>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
