--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>finagle-stats_${scala.major.version}</artifactId>
+                <version>${finagle.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
                 <version>${joda-time.version}</version>
@@ -308,4 +313,10 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>Twitter repository</id>
+            <url>http://maven.twttr.com/</url>
+        </repository>
+    </repositories>
 </project>
