--- a/rojanu-config/pom.xml
+++ b/rojanu-config/pom.xml
@@ -9,18 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>thrift-swift-finagle-example-client</artifactId>
+    <artifactId>rojanu-config</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.github.rojanu</groupId>
-            <artifactId>thrift-swift-finagle-example-api</artifactId>
+            <artifactId>rojanu-util</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.rojanu</groupId>
-            <artifactId>rojanu-finagle-client</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
     </dependencies>
 </project>
