--- a/rojanu-finagle-server/pom.xml
+++ b/rojanu-finagle-server/pom.xml
@@ -9,18 +9,30 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>thrift-swift-finagle-example-client</artifactId>
+    <artifactId>rojanu-finagle-server</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.github.rojanu</groupId>
-            <artifactId>thrift-swift-finagle-example-api</artifactId>
+            <artifactId>rojanu-config</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.rojanu</groupId>
-            <artifactId>rojanu-finagle-client</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.twitter</groupId>
+            <artifactId>finagle-core_${scala.major.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>twitter-server_${scala.major.version}</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
