--- a/rojanu-finagle-service/pom.xml
+++ b/rojanu-finagle-service/pom.xml
@@ -9,18 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>thrift-swift-finagle-example-client</artifactId>
+    <artifactId>rojanu-finagle-service</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.github.rojanu</groupId>
-            <artifactId>thrift-swift-finagle-example-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.rojanu</groupId>
-            <artifactId>rojanu-finagle-client</artifactId>
-            <version>${project.version}</version>
+            <groupId>io.github.finagle</groupId>
+            <artifactId>finagle-swift_${scala.major.version}</artifactId>
         </dependency>
     </dependencies>
 </project>
