Add support for just in time server

--- a/thrift-swift-finagle-example-server/pom.xml
+++ b/thrift-swift-finagle-example-server/pom.xml
@@ -38,6 +38,12 @@
         <!-- TEST DEPENDENCIES -->
         <dependency>
             <groupId>com.github.rojanu</groupId>
+            <artifactId>rojanu-test-utils</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.rojanu</groupId>
             <artifactId>thrift-swift-finagle-example-client</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
