--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>thrift-swift-finagle-example-client</module>
         <module>thrift-swift-finagle-example-server</module>
         <module>thrift-swift-finagle-example-rest</module>
+        <module>rojanu-test-utils</module>
     </modules>
 
     <properties>
@@ -42,6 +43,8 @@
         <jackson.version>2.5.1</jackson.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
         <httpcore.version>4.4.3</httpcore.version>
+
+        <slf4j.version>1.7.7</slf4j.version>
 
         <testng.version>6.9.4</testng.version>
 
@@ -212,7 +215,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>${slf4j-api.version}</version>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -241,7 +249,7 @@
                 <plugin>
                     <groupId>com.facebook.mojo</groupId>
                     <artifactId>swift2thrift-maven-plugin</artifactId>
-                    <version>${facebook-swift.version}</version>
+                    <version>1.0-SNAPSHOT</version>
                 </plugin>
                 <plugin>
                     <groupId>net.alchim31.maven</groupId>
