--- a/thrift-swift-finagle-example-api/pom.xml
+++ b/thrift-swift-finagle-example-api/pom.xml
@@ -38,7 +38,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.facebook.mojo</groupId>
+                <groupId>com.github.rojanu</groupId>
                 <artifactId>swift2thrift-maven-plugin</artifactId>
                 <executions>
                     <execution>
