--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
         <twitter-util.version>6.29.0</twitter-util.version>
         <twitter-server.version>1.15.0</twitter-server.version>
         <finagle-swift.version>0.1-SNAPSHOT</finagle-swift.version>
-        <facebook-swift.version>0.16.0-SNAPSHOT</facebook-swift.version>
         <libthrift.version>0.9.1</libthrift.version>
         <joda-time.version>2.0</joda-time.version>
         <jsr305.version>2.0.1</jsr305.version>
@@ -54,6 +53,7 @@
         <jasypt.version>1.9.2</jasypt.version>
         <slf4j-api.version>1.7.12</slf4j-api.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <version.scrooge>4.2.0</version.scrooge>
     </properties>
 
     <dependencyManagement>
@@ -62,6 +62,11 @@
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
                 <version>${scala.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.thrift</groupId>
+                <artifactId>libthrift</artifactId>
+                <version>${libthrift.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.twitter</groupId>
@@ -74,14 +79,9 @@
                 <version>${twitter-server.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.thrift</groupId>
-                <artifactId>libthrift</artifactId>
-                <version>${libthrift.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.facebook.swift</groupId>
-                <artifactId>swift-annotations</artifactId>
-                <version>${facebook-swift.version}</version>
+                <groupId>com.twitter</groupId>
+                <artifactId>scrooge-core_${scala.major.version}</artifactId>
+                <version>${version.scrooge}</version>
             </dependency>
             <dependency>
                 <groupId>com.twitter</groupId>
@@ -300,27 +300,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <fork>true</fork>
+                    <meminitial>128m</meminitial>
+                    <maxmem>512m</maxmem>
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.18.1</version>
                 <configuration>
+                    <argLine>-Xmx1024m</argLine>
+                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
                     <includes>
                         <include>**/When*.java</include>
+                        <include>**/Test*.java</include>
                         <include>**/*Test.java</include>
+                        <include>**/*Spec.java</include>
                     </includes>
                     <systemPropertyVariables>
                         <!--suppress MavenModelInspection -->
@@ -330,10 +330,24 @@
             </plugin>
         </plugins>
     </build>
+
     <repositories>
         <repository>
-            <id>Twitter repository</id>
-            <url>http://maven.twttr.com/</url>
+            <id>maven.central</id>
+            <name>Maven Central</name>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+        <repository>
+            <id>maven.twttr.com</id>
+            <name>maven.twttr.com</name>
+            <url>https://maven.twttr.com</url>
         </repository>
     </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>maven.twttr.com</id>
+            <name>maven.twttr.com</name>
+            <url>https://maven.twttr.com</url>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
