--- a/rojanu-finagle-service/pom.xml
+++ b/rojanu-finagle-service/pom.xml
@@ -20,13 +20,20 @@
             <groupId>com.twitter</groupId>
             <artifactId>scrooge-core_${scala.major.version}</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.twitter</groupId>-->
+            <!--<artifactId>util-core_${scala.major.version}</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.twitter</groupId>-->
+            <!--<artifactId>finagle-thrift_${scala.major.version}</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>com.twitter</groupId>
                 <artifactId>scrooge-maven-plugin</artifactId>
-                <version>${version.scrooge}</version>
                 <configuration>
                     <language>scala</language>
                     <!-- default is scala, can also be java -->
@@ -49,6 +56,46 @@
                         <goals>
                             <goal>testCompile</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--<plugin>-->
+            <!--<groupId>org.codehaus.mojo</groupId>-->
+            <!--<artifactId>build-helper-maven-plugin</artifactId>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>generate-sources</phase>-->
+            <!--<goals>-->
+            <!--<goal>add-source</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<sources>-->
+            <!--<source>${project.build.directory}/generated-sources/thrift</source>-->
+            <!--</sources>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+            <!--<groupId>net.alchim31.maven</groupId>-->
+            <!--<artifactId>scala-maven-plugin</artifactId>-->
+            <!--</plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>default-jar</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <classifier>idl</classifier>
+                            <includes>
+                                <include>**/*.thrift</include>
+                            </includes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
